tests/query_errors/scope_named_scripts3/error.txt
Error: 
    6 |   signed::max
      |   ^^^^^^^^^^^ The constant signed::max (absolute path) is not defined.